Support Prometheus-style labels, arbitrary histograms.
This is a pretty major overhaul of the public API.

The `Tacho` type holds a metrics pipeline:

`Metrics` provides a closeable, scopable handle for applications to produce
metrics. It provides a `Scope`, which creates labeled `MetricKey`s. These keys
identify a metric and its type, but accept no values.  Keys are to be
initialized early in program execution, and may be cloned cheaply (without
copying the underling labels). `Metrics` also produces RAII-guarded `Recorder`
instances. Values are passed to the the recorder with a key. When the recorder
instance is dropped, a `Sample` is sent on the recorder's mpsc channel.

An `Aggregator` processes a stream of `Sample`s cooperatively (i.e. yielding
back to the reactor after processing a batch of samples). Finally, the
aggregator publishes a `Report`.  The consumer of this `Report` may reset it as
it sees fit.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,20 @@
 [package]
 name = "tacho"
-description = "Tokio-aware metrics library for tracking system performance."
-version = "0.1.1"
+description = "Tokio-aware metrics library."
+version = "0.2.0"
 authors = ["Steve Jenson <stevej@buoyant.io>",
            "Oliver Gould <oliver@buoyant.io>"]
 repository = "https://github.com/BuoyantIO/tacho"
 license = "Apache-2.0"
 readme = "README.md"
 
-[profile.release]
-debug = true
-
-[[bin]]
-name = "futures_performance_test"
-
-[[bin]]
-name = "performance_test"
-
 [dependencies]
+futures = "0.1"
+tokio-timer = "0.1"
+hdrsample = "3.0"
+twox-hash = "1.0"
 log = "0.3"
-env_logger = "0.3.1"
-futures = "0.1.11"
-tokio-core = "0.1.6"
-hdrsample = "3.0.0"
-chrono = "0.3"
-twox-hash = "1.0.1"
-tokio-timer = "0.1.0"
+
+[dev-dependencies]
+tokio-core = "0.1"
+pretty_env_logger = "0.1"
