--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tacho"
-description = "Tokio-aware metrics library."
-version = "0.2.0"
+description = "A prometheus-focused metrics library"
+version = "0.3.0"
 authors = ["Steve Jenson <stevej@buoyant.io>",
            "Oliver Gould <oliver@buoyant.io>"]
 repository = "https://github.com/BuoyantIO/tacho"
@@ -9,12 +9,12 @@ license = "Apache-2.0"
 readme = "README.md"
 
 [dependencies]
-futures = "0.1"
-tokio-timer = "0.1"
 hdrsample = "3.0"
 twox-hash = "1.0"
 log = "0.3"
 
 [dev-dependencies]
+tokio-timer = "0.1"
+futures = "0.1"
 tokio-core = "0.1"
 pretty_env_logger = "0.1"
