--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,11 @@ jobs:
           key: rust-{{ checksum "/rust/update-hashes/nightly-x86_64-unknown-linux-gnu" }}.0
 
       - run:
-          name: install rustfmt and clippy
+          name: install rustfmt #and clippy
           command: |
             if [ ! -x /cargo/bin/cargo-fmt ]; then cargo install rustfmt ; fi
-            if [ ! -x /cargo/bin/cargo-clippy ]; then cargo install clippy ; fi
+            # FIXME https://github.com/Manishearth/rust-clippy/issues/1778
+            #if [ ! -x /cargo/bin/cargo-clippy ]; then cargo install clippy ; fi
 
       - save_cache:
           key: rust-{{ checksum "/rust/update-hashes/nightly-x86_64-unknown-linux-gnu" }}.0
@@ -43,9 +44,9 @@ jobs:
           paths:
             - target
 
-      - run:
-          name: lint
-          command: cargo clippy
+      #- run:
+      #    name: lint
+      #    command: cargo clippy
 
       - run:
           name: format
