--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,7 @@ jobs:
           name: install rustfmt #and clippy
           command: |
             if [ ! -x /cargo/bin/cargo-fmt ]; then cargo install rustfmt ; fi
-            # FIXME https://github.com/Manishearth/rust-clippy/issues/1778
-            #if [ ! -x /cargo/bin/cargo-clippy ]; then cargo install clippy ; fi
+            if [ ! -x /cargo/bin/cargo-clippy ]; then cargo install clippy ; fi
 
       - save_cache:
           key: rust-{{ checksum "/rust/update-hashes/nightly-x86_64-unknown-linux-gnu" }}.0
@@ -36,17 +35,21 @@ jobs:
           key: cargo.lock-{{ checksum "Cargo.lock" }}
 
       - run:
-          name: test
-          command: cargo test
+          name: build
+          command: cargo build --examples --tests
 
       - save_cache:
           key: cargo.lock-{{ checksum "Cargo.lock" }}
           paths:
             - target
 
-      #- run:
-      #    name: lint
-      #    command: cargo clippy
+      - run:
+          name: test
+          command: cargo test
+
+      - run:
+         name: lint
+         command: cargo clippy
 
       - run:
           name: format
