Use parking_lot::Mutex
This makes the uncontended stat benchmarks about 1.5x faster. According
to the parking_lot README, the contended behavior is even better when
compared to the standard library mutex.

name                               control.txt ns/iter  hypothesis.txt ns/iter  diff ns/iter   diff %  speedup
tests::bench_counter_create        209                  194                              -15   -7.18%   x 1.08
tests::bench_counter_create_x1000  589,431              550,925                      -38,506   -6.53%   x 1.07
tests::bench_counter_update        10                   10                                 0    0.00%   x 1.00
tests::bench_counter_update_x1000  12,136               12,084                           -52   -0.43%   x 1.00
tests::bench_gauge_create          211                  198                              -13   -6.16%   x 1.07
tests::bench_gauge_create_x1000    586,360              547,927                      -38,433   -6.55%   x 1.07
tests::bench_gauge_update          1                    1                                  0    0.00%   x 1.00
tests::bench_gauge_update_x1000    3,254                3,249                             -5   -0.15%   x 1.00
tests::bench_scope_clone           119                  119                                0    0.00%   x 1.00
tests::bench_scope_clone_x1000     233,336              232,510                         -826   -0.35%   x 1.00
tests::bench_scope_label           246                  230                              -16   -6.50%   x 1.07
tests::bench_scope_label_x1000     382,955              370,484                      -12,471   -3.26%   x 1.03
tests::bench_stat_add_x1000        46,101               30,076                       -16,025  -34.76%   x 1.53
tests::bench_stat_create           211                  200                              -11   -5.21%   x 1.05
tests::bench_stat_create_x1000     577,288              544,971                      -32,317   -5.60%   x 1.06
tests::bench_stat_

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ futures = "0.1"
 hdrsample = "3.0"
 log = "0.3"
 ordermap = "0.2.10"
+parking_lot = "0.4"
 
 [dev-dependencies]
 tokio-timer = "0.1"
